# radiacode-tools

./: .gitignore  LICENSE  README.md  calibrate.py  n42convert.py  n42validate.py  n42www.py  pyproject.toml  radiacode_poll.py  radqr.py  requirements.txt  setup.py
.github/workflows/: codecov.yml  tests.yml
src/: .gitignore  appmetrics.py  calibrate.py  deadtime.py  gpsled.py  n42convert.py  n42validate.py  n42www.py  radiacode_poll.py  radqr.py  rc_codecs.py  rcfiles.py  rcmultispg.py  rcrtlog.py  rcspectroplot.py  rcspg_from_json.py  rctrackplot.py  rctrk_from_json.py  rctypes.py  rcutils.py  recursive_deadtime.py  sanitize_track.py  spectrogram_energy.py  track_edit.py  track_plot.py  track_sanitize.py
src/radiacode_tools/: appmetrics.py  rc_codecs.py  rc_files.py  rc_radqr.py  rc_types.py  rc_utils.py  rc_validators.py
tests/: K40.rcspg  data_invalid.n42  data_invalid_spectrum.xml  mock_radiacode.py  test_appmetrics.py  test_calibrate.py  test_deadtime.py  test_dt_ba133.xml  test_dt_ba133_na22.xml  test_dt_bg.xml  test_dt_na22.xml  test_dtr.py  test_multispg.py  test_n42convert.py  test_n42validate.py  test_n42www.py  test_radiacode_poll.py  test_radqr.py  test_rc_codecs.py  test_rc_files.py  test_rc_files_n42.py  test_rc_files_rcspectrum.py  test_rc_files_rcspg.py  test_rc_files_rctrk.py  test_rc_types.py  test_rc_validators.py  test_rcrtlog.py  test_rcspectroplot.py  test_rcspg_from_json.py  test_rctrk_from_json.py  test_rcutils.py  test_spectrogram_energy.py  test_track_edit.py  test_track_plot.py  test_track_sanitize.py
tests/data/: broken_arrow_errrr_airplane.ndjson  data_am241.n42  data_am241.xml  data_invalid_cal_inconsistent_order.xml  data_invalid_cal_incorrect_order.xml  data_th232_plus_background.xml  trinitite.xml  walk.rctrk  xray.ndjson
tests/data_deadtime/: bg.xml
tests/data_deadtime/Ba133_Eu152/: Ba133_a+Eu152_b.xml  Ba133_a.xml  Eu152_b.xml
tests/data_deadtime/Co60_Cs137/: Co60_a+Cs137_b.xml  Co60_a.xml  Cs137_b.xml
