[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "radiacode_tools"
authors = [
  { name="Chris Kuethe", email="chris.kuethe@gmail.com" },
]
description = "Interfacing RadiaCode PSRDs to other gamma ray spectroscopy tools"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities"
]
version = "0.1.3"
dependencies = [
  "dateutils>=0.6.12",
  "defusedxml>=0.7.1",
  "flask>=3.1.0",
  "kaleido==0.2.0", # something is busted between uv and pypi...
  "qrcode>=8.0",
  "radiacode>=0.3.5",
  "requests>=2.32.3",
  "tqdm>=4.67.1",
  "xmlschema>=3.4.5",
  "xmltodict>=0.14.2",
]

[project.urls]
"Homepage" = "https://github.com/ckuethe/radiacode-tools"
"Bug Tracker" = "https://github.com/ckuethe/radiacode-tools/issues"

[project.scripts]
rccalibrate = "calibrate:main"
rcdeadtime = "deadtime:main"
rcmultispg = "rcmultispg:main"
rcspg_from_json = "rcspg_from_json:main"
rcsanitize = "track_sanititze:main"
rctrkedit = "track_edit:main"
rctrkplot = "track_plot:main"
n42www = "n42www:main"
n42convert = "n42convert:main"
n42validate = "n42validate:main"
radiacode-poll = "radiacode_poll:main"
spectrogram-energy = "spectrogram_energy:main"
rcspectrogram = "rcspectroplot:main"
gpsled = "gpsled:main"
recursivedeadtime = "recursive_deadtime:main"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[project.optional-dependencies]
graphical = [
    "matplotlib>=3.10.1",
    "plotly-express>=0.4.1",
    "kaleido==0.2.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "bpython>=0.25",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
]
